# solvable

./: .gitignore  Cargo.toml
.github/workflows/: deploy.yml
.kiro/specs/formulation-patterns/: design.md  requirements.md  tasks.md
.kiro/specs/interactive-plot/: design.md  requirements.md  tasks.md
.kiro/specs/lp-format-parser/: design.md  requirements.md  tasks.md
.kiro/specs/mip-explorer/: design.md  requirements.md  tasks.md
.kiro/specs/sandbox-mode/: design.md  requirements.md  tasks.md
.kiro/specs/sensitivity-explorer/: design.md  requirements.md  tasks.md
crates/solvable-core/: Cargo.toml
crates/solvable-core/src/: error.rs  lexer.rs  lib.rs  model.rs  parse_result.rs  parser.rs  validate.rs
crates/solvable-core/tests/: model_tests.rs  parse_examples.rs
crates/solvable-solver/: Cargo.toml
crates/solvable-wasm/: Cargo.toml
crates/solvable-wasm/src/: lib.rs
examples/: diet_problem.lp  knapsack.lp  portfolio.lp  production_mix.lp  transportation.lp
spike/: FINDINGS.md  package.json  test-highs.mjs
web/: index.html  package.json  vite.config.ts
web/src/: App.svelte  ChapterSidebar.svelte  CheckpointBlock.svelte  EditorPanel.svelte  GoDeeperBlock.svelte  InteractivePlot.svelte  InteractivePlotPlaceholder.svelte  LessonView.svelte  PredictionBlock.svelte  ProseBlock.svelte  ResultsPanel.svelte  RevealBlock.svelte  SandboxView.svelte  VertexWalker.svelte  examples.ts  geometry.ts  lp-language.ts  lp-parser.ts  parser.ts  plot-model.ts  progress.ts  router.ts  solver-worker.ts  solver.ts  types.ts  vite-env.d.ts
web/src/chapters/: index.ts  (+1 more)
(+65 files in other folders)
