[package]
name = "solvable-core"
description = "Model IR, LP format parser, and validation for the solvable optimization solver"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
