[package]
name = "solvable-wasm"
description = "WASM bindings exposing the solvable LP parser to JavaScript"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solvable-core = { path = "../solvable-core" }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
